# dffml

./: .buildinfo  .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .gitpod.yml  .lgtm.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HACKING.md  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  about.html  authorized_keys  changelog.html  cli.html  community.html  contact.html  db.sql  genindex.html  index.html  installation.html  lgtm.yaml  misc.py  model.yaml  modelcifar.yaml  objects.inv  publications.html  py-modindex.html  pyproject.toml  pytorch.py  requirements-dev.txt  (+9 more)
configloader/image/: .coveragerc  README.md  requirements.txt  setup.cfg  setup.py  setup_common.py
configloader/image/dffml_config_image/: configloader.py
configloader/image/tests/: test_config.py
contexts/installed/: .coveragerc  .gitignore  MANIFEST.in  pyproject.toml  setup.cfg
contexts/installed/dffml_contexts_installed/: __init__.py  generate_namespace.py
dffml/skel/common/: LICENSE  MANIFEST.in  dffml_setup_common.py  pyproject.toml  setup.cfg  setup_common.py
entities/alice/: .coveragerc  .gitignore  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  entry_points.txt  pyproject.toml  setup.cfg  setup.py
entities/alice/alice/: __main__.py  cli.py  conversation.py  system_context.py  threats_md.py
examples/shouldi/: .coveragerc  .dockerignore  .gitignore  README.md  requirements.txt  setup.cfg  setup.py  setup_common.py  setup_console_scripts.py
examples/shouldi/shouldi/: bandit.py  cargo_audit.py  cli.py  dependency_check.py  golangci_lint.py  npm_audit.py  pypi.py  safety.py  types.py  use.py
examples/shouldi/tests/: binaries.py  test_bandit.py  test_cargo_audit.py  test_cli.py  test_cli_use.py  test_dependency_check.py  test_golangci_lint.py  test_npm_audit.py  test_pypi.py  test_safety.py
feature/git/: .coveragerc  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
feature/git/dffml_feature_git/: github_api.py  repos.py  version.py
feature/git/tests/: test_bandit.py  test_df.py  test_feature.py  test_git.py  test_pylint.py  test_release.py
model/autosklearn/: .coveragerc  README.md  requirements.txt  setup.cfg  setup.py  setup_common.py
model/autosklearn/dffml_model_autosklearn/: __init__.py  autoclassifier.py  autoregressor.py  autosklearn_base.py  config.py
model/autosklearn/examples/: autoregressor.py
model/autosklearn/tests/: test_autoclassifier_integration.py  test_autoregressor_integration.py  test_models.py
model/daal4py/: .coveragerc  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  setup_common.py
model/daal4py/dffml_model_daal4py/: daal4pylr.py
model/daal4py/tests/: test_LR.py  test_lr.py  test_lr_integration.py
model/lightgbm/: .coveragerc  .gitignore  LICENSE  README.md  entry_points.txt  setup.cfg
model/lightgbm/dffml_model_lightgbm/: lgbmclassifier.py  lgbmregressor.py
model/lightgbm/examples/: regression_example.py
model/lightgbm/tests/: test_classifier_model.py  test_regressor_model.py
model/orion/: .coveragerc  LICENSE  README.md  entry_points.txt  setup.cfg  setup.py  setup_common.py
model/orion/dffml_model_orion/: __init__.py  myslr.py  orion_model.py
model/orion/examples/: example_myslr.py  example_orion.py  gen_data.py  predict.csv  test.csv  train.csv
model/orion/model/: Model  orion_model.p
model/orion/tests/: test_integration.py  test_model.py  train.csv
model/pytorch/: .coveragerc  .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  setup_common.py
model/pytorch/dffml_model_pytorch/: __init__.py  pytorch_accuracy_scorer.py  pytorch_base.py  pytorch_net.py  pytorch_nn.py  pytorch_pretrained.py  pytorch_utils.py  resnet18.py
model/pytorch/tests/: test_dfcn.py  test_model.py  test_pytorchnet.py  test_resnet18.py
model/scikit/: .coveragerc  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
model/scikit/dffml_model_scikit/: __init__.py  rgrsupport.py  ridge.py  sciLR.py  scikNN.py  scikNN_dyn.py  scikit_base.py  scikit_model_scorer.py  scikit_models.py  scikit_scorer_base.py  scikit_scorers.py  scikitbase.py
model/scikit/scikit/: sciLR.py
model/scikit/tests/: test_ridge.py  test_sciLR.py  test_scikNN.py  test_scikNN_dyn.py  test_scikit.py  test_scikit_integration.py  test_scikit_scorers.py
model/tensorflow/: .coveragerc  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
model/tensorflow/dffml_model_tensorflow/: __init__.py  dnnc.py  dnnr.py  mytfslr.py  tf_base.py
model/tensorflow/tests/: test_dnn.py  test_dnnc.py  test_dnnr.py  test_tf_integration.py
model/tensorflow_hub/: .coveragerc  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  setup_common.py
model/tensorflow_hub/dffml_model_tensorflow_hub/: __init__.py  text_classifier.py  text_classifier_accuracy.py  tfhub_models.py  tfhub_utils.py
model/tensorflow_hub/tests/: test_model.py  test_tfhub_integration.py
model/vowpalWabbit/: .coveragerc  README.md  requirements.txt  setup.cfg  setup.py
model/xgboost/: .coveragerc  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  setup_common.py
model/xgboost/model/: model.joblib
operations/binsec/: .coveragerc  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
operations/data/: .coveragerc  Dockerfile  LICENSE  README.md  entry_points.txt  setup.cfg
operations/innersource/: .coveragerc  LICENSE  MANIFEST.in  README.rst  entry_points.txt  setup.cfg
operations/neo4j/: .coveragerc  Dockerfile  MANIFEST.in  README.rst  entry_points.txt  setup.cfg
service/activitypub-webhook-relay/: .coveragerc  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg
source/mongodb/: .coveragerc  LICENSE  MANIFEST.in  README.rst  entry_points.txt  setup.cfg
source/mysql/: .coveragerc  LICENSE  README.md  dffml_setup_common.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_common.py
source/xlsx/: .coveragerc  LICENSE  entry_points.txt  setup.cfg  xlsx.py
(+8372 files in other folders)
