[metadata]
name = alice
description = DFFML blank alice
long_description = file: README.rst
author = Unknown
author_email = unknown@example.com
maintainer = Unknown
maintainer_email = unknown@example.com
url = https://github.com/pdxjohnny/alice
license = MIT
# keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
# entry_points = file: entry_points.txt
setup_requires =
    setuptools_scm[toml]>=3.4.3
# install_requires =
#     dffml>=0.4.0

[options.extras_require]
dev =
    coverage
    codecov
    sphinx
    twine
    setuptools_scm[toml]>=3.4.3
    black==19.10b0
    importlib_metadata>=4.8.1;python_version<"3.8"
