[metadata]
name = shouldi
version = attr: shouldi.version.VERSION
description = Meta static analysis tool for Python packages
long_description = file: README.md
long_description_content_type = text/markdown
author = John Andersen
author_email = john.s.andersen@intel.com
maintainer = John Andersen
maintainer_email = john.s.andersen@intel.com
url = https://github.com/intel/dffml/blob/master/examples/shouldi/README.md
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml>=0.4.0
    dffml-feature-git>=0.3.0
    aiohttp>=3.5.4
    bandit>=1.6.2
    safety>=1.8.5
    PyYAML>=5.1.2

[options.entry_points]
console_scripts =
    shouldi = shouldi.cli:ShouldI.main
dffml.operation =
    run_bandit = shouldi.python.bandit:run_bandit
    safety_check = shouldi.python.safety:safety_check
    pypi_package_json = shouldi.python.pypi:pypi_package_json
    pypi_package_contents = shouldi.python.pypi:pypi_package_contents
    cleanup_pypi_package = shouldi.python.pypi:cleanup_pypi_package
shouldi.project.bom.db =
    yaml = shouldi.project.bom.db.yaml:YAMLDB
    pypi = shouldi.project.bom.db.pypi:PyPiDB
