[metadata]
name = 'wllearn'
version = '0.0.1'
description = ''
author = 'U.N. Owen'
author_email = 'me@un.known'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/wllearn'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
