[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
    python-dateutil==2.8.1; platform_system == "Linux" and python_version == "3.8"
    python-dateutil==2.8.1; platform_system == "Linux" and python_version == "3.7"
    python-dateutil==2.8.1; platform_system == "Darwin" and python_version == "3.7"
    python-dateutil==2.8.1; platform_system == "Windows" and python_version == "3.7"
    python-dateutil==2.8.1; platform_system == "Darwin" and python_version == "3.8"
