[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    auto-sklearn==0.12.3; platform_system == "Linux" and python_version == "3.8"
    auto-sklearn==0.12.3; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
