[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
    pandas==1.2.2; platform_system == "Linux" and python_version == "3.8"
    pandas==1.2.2; platform_system == "Linux" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Darwin" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Windows" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Darwin" and python_version == "3.8"
    joblib==1.0.1; platform_system == "Linux" and python_version == "3.8"
    joblib==1.0.1; platform_system == "Linux" and python_version == "3.7"
    joblib==1.0.1; platform_system == "Darwin" and python_version == "3.7"
    joblib==1.0.1; platform_system == "Windows" and python_version == "3.7"
    joblib==1.0.1; platform_system == "Darwin" and python_version == "3.8"
    # See https://github.com/intel/dffml/issues/816
    numpy==1.19.5; platform_system == "Linux" and python_version == "3.8"
    numpy==1.19.5; platform_system == "Linux" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Darwin" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Windows" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Darwin" and python_version == "3.8"
    daal4py==2021.1; platform_system == "Linux" and python_version == "3.8"
    daal4py==2021.1; platform_system == "Linux" and python_version == "3.7"
