[metadata]
name = dffml-model-lightgbm
version = attr: dffml_model_lightgbm.version.VERSION
description = LightGBM based models
long_description = file: README.md
long_description_content_type = text/markdown
author = Nitesh Yadav
author_email = niteshyadav585@gmail.com
maintainer = Nitesh Yadav
maintainer_email = niteshyadav585@gmail.com
url = https://github.com/intel/dffml/tree/master/model/lightgbm
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.txt
install_requires =
    lightgbm>=3.1.1
    pandas>=1.0
    joblib>=0.16.0
    dffml>=0.4.0
