[metadata]
name = dffml-model-orion
version = attr: dffml_model_orion.version.VERSION
description = DFFML model dffml-model-orion
long_description = file: README.md
long_description_content_type = text/markdown
author = Saahil
author_email = programmer290399@gmail.com
maintainer = Saahil
maintainer_email = programmer290399@gmail.com
url = https://github.com/saahil/dffml-model-orion
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.txt
install_requires =
    dffml>=0.4.0
