[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
    torch==1.7.1; platform_system == "Linux" and python_version == "3.8"
    torch==1.7.1; platform_system == "Linux" and python_version == "3.7"
    torch==1.7.1; platform_system == "Darwin" and python_version == "3.7"
    torch==1.7.1+cu110; platform_system == "Windows" and python_version == "3.7"
    torch==1.7.1; platform_system == "Darwin" and python_version == "3.8"
    torchvision==0.8.2; platform_system == "Linux" and python_version == "3.8"
    torchvision==0.8.2; platform_system == "Linux" and python_version == "3.7"
    torchvision==0.8.2; platform_system == "Darwin" and python_version == "3.7"
    torchvision==0.8.2+cu110; platform_system == "Windows" and python_version == "3.7"
    torchvision==0.8.2; platform_system == "Darwin" and python_version == "3.8"
    # See https://github.com/intel/dffml/issues/816
    numpy==1.19.5; platform_system == "Linux" and python_version == "3.8"
    numpy==1.19.5; platform_system == "Linux" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Darwin" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Windows" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Darwin" and python_version == "3.8"
tests_require =
    dffml-config-image>=0.1.0
    dffml-config-yaml>=0.1.0
