[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    tensorflow==2.4.1; platform_system == "Linux" and python_version == "3.8"
    tensorflow==2.4.1; platform_system == "Linux" and python_version == "3.7"
    tensorflow==2.4.1; platform_system == "Darwin" and python_version == "3.7"
    tensorflow==2.4.1; platform_system == "Windows" and python_version == "3.7"
    tensorflow==2.4.1; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
tests_require =
    scipy==1.4.1
    scikit-learn>=0.21.2
