[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
    dffml-model-tensorflow==0.3.0; platform_system == "Linux" and python_version == "3.8"
    dffml-model-tensorflow==0.3.0; platform_system == "Linux" and python_version == "3.7"
    dffml-model-tensorflow==0.3.0; platform_system == "Darwin" and python_version == "3.7"
    dffml-model-tensorflow==0.3.0; platform_system == "Windows" and python_version == "3.7"
    dffml-model-tensorflow==0.3.0; platform_system == "Darwin" and python_version == "3.8"
    dffml-model-tensorflow==0.3.0; platform_system == "Windows" and python_version == "3.8"
    tensorflow==2.4.1; platform_system == "Linux" and python_version == "3.8"
    tensorflow==2.4.1; platform_system == "Linux" and python_version == "3.7"
    tensorflow==2.4.1; platform_system == "Darwin" and python_version == "3.7"
    tensorflow==2.4.1; platform_system == "Windows" and python_version == "3.7"
    tensorflow==2.4.1; platform_system == "Darwin" and python_version == "3.8"
    tensorflow-hub==0.11.0; platform_system == "Linux" and python_version == "3.8"
    tensorflow-hub==0.11.0; platform_system == "Linux" and python_version == "3.7"
    tensorflow-hub==0.11.0; platform_system == "Darwin" and python_version == "3.7"
    tensorflow-hub==0.11.0; platform_system == "Windows" and python_version == "3.7"
    tensorflow-hub==0.11.0; platform_system == "Darwin" and python_version == "3.8"
    pandas==1.2.2; platform_system == "Linux" and python_version == "3.8"
    pandas==1.2.2; platform_system == "Linux" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Darwin" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Windows" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Darwin" and python_version == "3.8"
    # See https://github.com/intel/dffml/issues/816
    numpy==1.19.5; platform_system == "Linux" and python_version == "3.8"
    numpy==1.19.5; platform_system == "Linux" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Darwin" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Windows" and python_version == "3.7"
    numpy==1.19.5; platform_system == "Darwin" and python_version == "3.8"
