[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
    vowpalwabbit==8.9.0; platform_system == "Linux" and python_version == "3.8"
    vowpalwabbit==8.9.0; platform_system == "Linux" and python_version == "3.7"
    vowpalwabbit==8.9.0; platform_system == "Darwin" and python_version == "3.7"
    vowpalwabbit==8.9.0; platform_system == "Windows" and python_version == "3.7"
    vowpalwabbit==8.9.0; platform_system == "Darwin" and python_version == "3.8"
    # See https://github.com/intel/dffml/issues/737
    scipy==1.4.1; platform_system == "Linux" and python_version == "3.8"
    scipy==1.4.1; platform_system == "Linux" and python_version == "3.7"
    scipy==1.4.1; platform_system == "Darwin" and python_version == "3.7"
    scipy==1.4.1; platform_system == "Windows" and python_version == "3.7"
    scipy==1.4.1; platform_system == "Darwin" and python_version == "3.8"
    scikit-learn==0.24.1; platform_system == "Linux" and python_version == "3.8"
    scikit-learn==0.24.1; platform_system == "Linux" and python_version == "3.7"
    scikit-learn==0.24.1; platform_system == "Darwin" and python_version == "3.7"
    scikit-learn==0.24.1; platform_system == "Windows" and python_version == "3.7"
    scikit-learn==0.24.1; platform_system == "Darwin" and python_version == "3.8"
    pandas>=0.25.0