[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
    xgboost==1.3.3; platform_system == "Linux" and python_version == "3.8"
    xgboost==1.3.3; platform_system == "Linux" and python_version == "3.7"
    xgboost==1.3.3; platform_system == "Darwin" and python_version == "3.7"
    xgboost==1.3.3; platform_system == "Windows" and python_version == "3.7"
    xgboost==1.3.3; platform_system == "Darwin" and python_version == "3.8"
    pandas==1.2.2; platform_system == "Linux" and python_version == "3.8"
    pandas==1.2.2; platform_system == "Linux" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Darwin" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Windows" and python_version == "3.7"
    pandas==1.2.2; platform_system == "Darwin" and python_version == "3.8"
    scikit-learn==0.24.1; platform_system == "Linux" and python_version == "3.8"
    scikit-learn==0.24.1; platform_system == "Linux" and python_version == "3.7"
    scikit-learn==0.24.1; platform_system == "Darwin" and python_version == "3.7"
    scikit-learn==0.24.1; platform_system == "Windows" and python_version == "3.7"
    scikit-learn==0.24.1; platform_system == "Darwin" and python_version == "3.8"
    joblib>=0.16.0