[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
    aiohttp==3.7.3; platform_system == "Linux" and python_version == "3.8"
    aiohttp==3.7.3; platform_system == "Linux" and python_version == "3.7"
    aiohttp==3.7.3; platform_system == "Darwin" and python_version == "3.7"
    aiohttp==3.7.3; platform_system == "Windows" and python_version == "3.7"
    aiohttp==3.7.3; platform_system == "Darwin" and python_version == "3.8"
    rpmfile==1.0.8; platform_system == "Linux" and python_version == "3.8"
    rpmfile==1.0.8; platform_system == "Linux" and python_version == "3.7"
    rpmfile==1.0.8; platform_system == "Darwin" and python_version == "3.7"
    rpmfile==1.0.8; platform_system == "Windows" and python_version == "3.7"
    rpmfile==1.0.8; platform_system == "Darwin" and python_version == "3.8"
    pyelftools==0.27; platform_system == "Linux" and python_version == "3.8"
    pyelftools==0.27; platform_system == "Linux" and python_version == "3.7"
    pyelftools==0.27; platform_system == "Darwin" and python_version == "3.7"
    pyelftools==0.27; platform_system == "Windows" and python_version == "3.7"
    pyelftools==0.27; platform_system == "Darwin" and python_version == "3.8"
