[metadata]
name = dffml-operations-data
version = attr: dffml_operations_data.version.VERSION
description = DFFML operations dffml-operations-data
long_description = file: README.md
long_description_content_type = text/markdown
author = "Sudhanshu kumar "
author_email = sudhanshukumar5459@gmail.com
maintainer = "Sudhanshu kumar "
maintainer_email = sudhanshukumar5459@gmail.com
url = https://github.com/gitpod/dffml-operations-data
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.txt
install_requires =
    dffml>=0.4.0
    scikit-learn>=0.21.2
    numpy>=1.19.2
