[metadata]
name = dffml-operations-innersource
version = attr: dffml_operations_innersource.version.VERSION
description = DFFML Operations for measureing org health
long_description = file: README.rst
author = John Andersen
author_email = johnandersenpdx@gmail.com
maintainer = John Andersen
maintainer_email = johnandersenpdx@gmail.com
url = https://github.com/intel/dffml/blob/master/operations/innersource
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.txt
install_requires =
    dffml>=0.4.0
    pyyaml>=6.0

[options.extras_require]
dev =
    coverage
    codecov
    sphinx
    twine
    black==19.10b0
    importlib_metadata>=4.8.1;python_version<"3.8"
