[metadata]
name = dffml-source-mongodb
description = DFFML source dffml-source-mongodb
version = attr: dffml_source_mongodb.version.VERSION
long_description = file: README.rst
author = John Andersen
author_email = johnandersenpdx@gmail.com
maintainer = John Andersen
maintainer_email = johnandersenpdx@gmail.com
url = https://github.com/dffml/dffml-source-mongodb
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.txt
install_requires =
    dffml>=0.4.0
    motor>=2.5.1

[options.extras_require]
dev =
    coverage
    codecov
    sphinx
    twine
    black==19.10b0
    importlib_metadata>=4.8.1;python_version<"3.8"
    docker>=4.0.2
