[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Linux" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.7"
    dffml==0.4.0; platform_system == "Darwin" and python_version == "3.8"
    dffml==0.4.0; platform_system == "Windows" and python_version == "3.8"
    aiomysql==0.0.21; platform_system == "Linux" and python_version == "3.8"
    aiomysql==0.0.21; platform_system == "Linux" and python_version == "3.7"
    aiomysql==0.0.21; platform_system == "Darwin" and python_version == "3.7"
    aiomysql==0.0.21; platform_system == "Windows" and python_version == "3.7"
    aiomysql==0.0.21; platform_system == "Darwin" and python_version == "3.8"
tests_require =
    docker>=4.0.2
