[metadata]
name = dffml-source-xlsx
version = attr: dffml_source_xlsx.version.VERSION
description = DFFML source dffml-source-xlsx
long_description = file: README.md
long_description_content_type = text/markdown
author = Pratik Dey
author_email = pratikrocks.dey11@gmail.com
maintainer = Pratik Dey
maintainer_email = pratikrocks.dey11@gmail.com
url = "https://github.com/pratik/dffml-source-xlsx"
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.txt
install_requires =
    dffml>=0.4.0
    openpyxl>=3.0.6
