[metadata]
name = REPLACE_PACKAGE_NAME
version = attr: REPLACE_IMPORT_PACKAGE_NAME.version.VERSION
description = REPLACE_DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
author = REPLACE_AUTHOR_NAME
author_email = REPLACE_AUTHOR_EMAIL
maintainer = REPLACE_AUTHOR_NAME
maintainer_email = REPLACE_AUTHOR_EMAIL
url = "https://github.com/REPLACE_ORG_NAME/REPLACE_PACKAGE_NAME"
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.txt
install_requires =
    dffml>=REPLACE_DFFML_VERSION
